--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "watch": "nodemon src/server.js",
+    "build": "BUILD_PATH=../server/public react-scripts build",
     "start": "node src/server.js",
     "test": "jest  --detectOpenHandles",
     "test-watch": "jest --watch",
