--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: '20'
-      - run: npm install
-      # - run: npm install --prefix client
+      # - run: npm install
+      - run: npm install --prefix client
       - run: npm run build --prefix client
