--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,13 +6,18 @@ on:
     branches: [main]
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix: 
+        node-version: [14.x,16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js version 20
+      - name: Use Node.js version {{matrix.node-version}}
         uses: actions/setup-node@v3
         with: 
-          node-version: '20'
+          node-version: ${{matrix.node-version}}
       # - run: npm install
       - run: npm install --prefix client
       - run: npm run build --prefix client
