--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install-server": "cd server && npm install",
-    "install-client": "cd client && npm install",
+    "install-server": "npm install --prefix server",
+    "install-client": "npm install --prefix client",
     "install-all": "npm run install-server && npm run install-client",
     "install": "npm run install-server && npm run install-client",
     "server": "npm run watch --prefix server",
