--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -21,3 +21,4 @@ jobs:
       # - run: npm install
       - run: npm install --prefix client
       - run: npm run build --prefix client
+      - run: npm test
