--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: ${{matrix.node-version}}
-      # - run: npm install
-      - run: npm install --prefix client
+      - run: npm install-all
+      # - run: npm install --prefix client
       - run: npm run build --prefix client
       - run: npm test
