--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0",
+    "nasa-project": "file:..",
     "pm2": "^2.10.4"
   },
   "devDependencies": {
