--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,16 +8,24 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/nasa
     strategy:
       matrix: 
         node-version: [14.x,16.x]
+        mongodb-version: ['4.2', '4.4']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js version {{matrix.node-version}}
+
         uses: actions/setup-node@v3
         with: 
           node-version: ${{matrix.node-version}}
+      - name: Use MongoDB from Github actions
+        uses: supercharge/mongodb-github-action@1.10.0
+        with: 
+          mongodb-version: ${{matrix.mongodb-version}}
+
       - run: npm run install-all
       # - run: npm install --prefix client
       - run: npm run build --prefix client
