--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "watch": "nodemon src/server.js",
     "build": "BUILD_PATH=../server/public react-scripts build",
     "start": "node src/server.js",
-    "test": "jest  --detectOpenHandles",
+    "test": "jest  --detectOpenHandles --passWithNoTests",
     "test-watch": "jest --watch",
     "cluster": "pm2 start src/server.js -i max"
   },
