--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "override": {
+      "transformIgnorePatterns": ["..."]
+    }
   },
   "dependencies": {
     "axios": "^1.6.2",
