--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "jest": {
     "testEnvironment": "node",
-    "transformIgnorePatterns": ["..."]
+    "transformIgnorePatterns": [ "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"]
   },
   "dependencies": {
     "axios": "^1.6.2",
