--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,7 @@
   "author": "",
   "license": "ISC",
   "jest": {
-    "testEnvironment": "node",
-    "transformIgnorePatterns": [ "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"]
+    "testEnvironment": "node"
   },
   "dependencies": {
     "axios": "^1.6.2",
